Temp fix for CK toolbar - z-index is higher than TA toolbar

--- a/webroot/css/less/tiny_admin.less
+++ b/webroot/css/less/tiny_admin.less
@@ -14,6 +14,10 @@
 	 outline-color: fade(color('#80B5F2'), 70%);
 }
 
+.cke {
+	z-index: 10001 !important;
+}
+
 .ta-toolbar {
 	// Reset
 	@import "bootstrap/normalize.less";
